Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.5.10, 10.6.1
-
Component/s: Storage Engine - InnoDB
-
Labels:
Description
(gdb) print buf_pool.mutex
|
bq. $1 = {m_mutex = {__data = {__lock = 2, __count = 0, __owner = 219, __nusers = 1, __kind = 3, __spins = 8, __elision = 0, __list = {__prev = 0x0, __next = 0x0}},
|
bq. __size = "\002\000\000\000\000\000\000\000\333\000\000\000\001\000\000\000\003\000\000\000\b", '\000' <repeats 18 times>, __align = 2}, m_psi = 0x7fe0094c2bc0}
|
bq.
|
(gdb) print buf_pool.flush_list_mutex
|
$2 = {m_mutex = {__data = {__lock = 2, __count = 0, __owner = 44, __nusers = 2, __kind = 3, __spins = 10, __elision = 0, __list = {__prev = 0x0, __next = 0x0}},
|
__size = "\002\000\000\000\000\000\000\000,\000\000\000\002\000\000\000\003\000\000\000\n", '\000' <repeats 18 times>, __align = 2}, m_psi = 0x7fe0094c2c40}
|
(gdb) thread apply all backtrace
|
Attachments
Issue Links
- is caused by
-
MDEV-23399 10.5 performance regression with IO-bound tpcc
-
- Closed
-
- is part of
-
MDEV-25773 sysbench-TPCC failed to prepare with extremely slow execution
-
- Closed
-
- relates to
-
MDEV-25800 DROP TABLE unnecessarily accesses .ibd file
-
- Open
-