storage/innobase/fil/fil0fil.cc
@@ -1742,7 +1742,7 @@ void fil_close_tablespace(ulint id)
 	can no longer read more pages of this tablespace to buf_pool.
 	Thus we can clean the tablespace out of buf_pool
 	completely and permanently. */
-	while (buf_flush_dirty_pages(id));
+	while (buf_flush_list_space(space));
 	ut_ad(space->is_stopping());
 
 	/* If the free is successful, the X lock will be released before
